build/log/idf_py_stderr_output_21189
/home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c: In function 'got_ip_event':
/home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c:54:10: error: 'esp_mqtt_client_config_t' has no member named 'uri'
   54 |         .uri = BROKER_URI,
      |          ^~~
/home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c:53:41: error: missing braces around initializer [-Werror=missing-braces]
   53 |     esp_mqtt_client_config_t mqtt_cfg = {
      |                                         ^
/home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c: In function 'ethernet_init':
/home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c:70:5: warning: 'smi_mdc_gpio_num' is deprecated: Please use smi_gpio instead [-Wdeprecated-declarations]
   70 |     emac_config.smi_mdc_gpio_num = ETH_MDC_GPIO;
      |     ^~~~~~~~~~~
In file included from /home/a/Downloads/esp-idf-v5.4.1/components/esp_eth/include/esp_eth_driver.h:13,
                 from /home/a/Downloads/esp-idf-v5.4.1/components/esp_eth/include/esp_eth.h:15,
                 from /home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c:9:
/home/a/Downloads/esp-idf-v5.4.1/components/esp_eth/include/esp_eth_mac_esp.h:171:17: note: declared here
  171 |             int smi_mdc_gpio_num __attribute__((deprecated("Please use smi_gpio instead")));  /*!< SMI MDC GPIO number, set to -1 could bypass the SMI GPIO configuration */
      |                 ^~~~~~~~~~~~~~~~
/home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c:71:5: warning: 'smi_mdio_gpio_num' is deprecated: Please use smi_gpio instead [-Wdeprecated-declarations]
   71 |     emac_config.smi_mdio_gpio_num = ETH_MDIO_GPIO;
      |     ^~~~~~~~~~~
/home/a/Downloads/esp-idf-v5.4.1/components/esp_eth/include/esp_eth_mac_esp.h:172:17: note: declared here
  172 |             int smi_mdio_gpio_num __attribute__((deprecated("Please use smi_gpio instead"))); /*!< SMI MDIO GPIO number, set to -1 could bypass the SMI GPIO configuration */
      |                 ^~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/tcp_eth.c.obj] Erro 1
make[1]: *** [CMakeFiles/Makefile2:5721: esp-idf/main/CMakeFiles/__idf_main.dir/all] Erro 2
make: *** [Makefile:136: all] Erro 2
